Compiler/src/main/java/Testing/Tests/SemanticTests/failing/DuplicateStruct.ru
struct A{}
impl A{
.(){}}
struct A{}
start{}